Fix a few small CSS issues throughout the UI.
This corrects a few styling issues in some parts of the UI.

* The "Publish Review" menubutton in the Review Dialog had extra
  padding, as it was inheriting an unwanted margin setting.

* Form field labels for checkboxes/radio buttons had an unwanted margin
  at the top, causing an alignment issue.

* Config form styling was taking precedence over form rows, causing
  too much spacing between rows.

This fixes each of these, nicely polishing up ugly spots in the UI.

Testing Done:
Tested each of these bits of UI, and verified that they didn't break other
forms or menu buttons.

Reviewed at https://reviews.reviewboard.org/r/11335/

--- a/reviewboard/static/rb/css/ui/forms.less
+++ b/reviewboard/static/rb/css/ui/forms.less
@@ -461,6 +461,7 @@ textarea {
       display: inline-block;
       font-weight: normal;
       margin-bottom: 0;
+      margin-top: 0;
       white-space: normal;
     }
   }
@@ -818,9 +819,14 @@ textarea {
  *  </div>
  */
 .rb-c-form-row {
-  @_form-row-vars: #rb-ns-ui.form-row();
+  &,
+  .djblets-c-config-forms-page__content &.fields-row,
+  .config-forms-page-content &.fields-row {
+    @_form-row-vars: #rb-ns-ui.form-row();
 
-  padding: @_form-row-vars[@padding-vert] @_form-row-vars[@padding-horiz];
+    margin: @_form-row-vars[@padding-vert] @_form-row-vars[@padding-horiz];
+    padding: 0;
+  }
 }
 
 
